--- a/src/components/navBar/Navbar.css
+++ b/src/components/navBar/Navbar.css
@@ -1,60 +1,48 @@
-.navbar-container {
-    width: 100%;
-    height: 10vh;
-    background: linear-gradient(rgb(228, 170, 199), rgb(177, 107, 164));
-    display: flex;
-    justify-content: space-between;
-    border-radius: 4%;
-}
-
-
-.container-logo {
-    width: 10%;
-}
-
-.container-logo>img {
-    width: 80%;
-    height: 10vh;
-    object-fit: cover;
-}
-
 .navbar {
-    width: 70%;
-    height: 10vh;
+    width: auto;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    background: linear-gradient(to right, rgb(240, 204, 204), rgb(227, 201, 191));
+
+}
+
+.logo {
+    animation-duration: 2s;
+    animation-name: slidetop;
+}
+
+.navbar-brand {
+    margin-left: 40%;
+    animation-duration: 10s;
+    animation-name: fadein;
 }
 
 
-.navbar-item {
-    list-style: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    /* box-shadow: 2px 2px 2px 2px grey; */
-    padding: 7px 10px;
-    border-radius: 10px;
-    background: radial-gradient(rgb(228, 170, 199), rgb(236, 211, 231));
-    text-align: center;
+.navbar-nav {
+    margin-left: 40%;
 }
 
-.container-cart {
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+.nav-item {
+    padding-left: 15%;
 }
 
-.counter-cart {
-    position: absolute;
-    top: 4%;
-    right: 35%;
-    width: 30px;
-    height: 30px;
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+
+@keyframes slidetop {
+    from {
+        margin-bottom: -10%;
+    }
+
+    to {
+        margin-bottom: 0%;
+    }
+}
+
+@keyframes fadein {
+    from {
+        opacity: 50%;
+    }
+
+    to {
+        opacity: 100%;
+    }
 }
