--- a/src/components/itemListContainer/itemListContainer.css
+++ b/src/components/itemListContainer/itemListContainer.css
@@ -1,6 +1,3 @@
-.saludo{display: flex;
-    flex-direction: row;
-align-items: center;
-margin: 10%;
-color: pink;}
-
+.cuadricula{display: flex;
+flex-wrap: nowrap;
+align-content: space-between;}
